idk whether u made changes b4 this one cuz i forgot to upload this last time

--- a/Basic_Information.html
+++ b/Basic_Information.html
@@ -50,71 +50,71 @@
             <table>
                 <tr class="Arsenal">
                     <td>
-                        <h5>Rifles</h5>
+                        <h5>Vandal</h5>
                         <img src="Assets/Weapons/Vandal.png" alt="Vandal">
                     </td>
                     <td>
-                        <h5>GUN</h5>
+                        <h5>Spectre</h5>
                         <img src="Assets/Weapons/Spectre.png" alt="Spectre">
                     </td>
                   </tr>
                 <tr class="Arsenal">
                     <td>
-                        <h5>GUN</h5>
+                        <h5>Ares</h5>
                         <img src="Assets/Weapons/Ares.png" alt="Classic">
                     </td>
                     <td>
-                        <h5>Pistol</h5>
+                        <h5>Bucky</h5>
                         <img src="Assets/Weapons/Bucky.png" alt="Classic">
                     </td>
                 </tr>
                 <tr class="Arsenal">
                     <td>
-                        <h5>Pistol</h5>
+                        <h5>Ghost</h5>
                         <img src="Assets/Weapons/Ghost.png" alt="Classic">
                     </td>
                     <td>
-                        <h5>Pistol</h5>
+                        <h5>Guardian</h5>
                         <img src="Assets/Weapons/Guardian.png" alt="Classic">
                     </td>
                 </tr>
                 <tr class="Arsenal">
                     <td>
-                        <h5>Pistol</h5>
+                        <h5>Judge</h5>
                         <img src="Assets/Weapons/Judge.png" alt="Classic">
                     </td>
                     <td>
-                        <h5>Pistol</h5>
+                        <h5>Marshal</h5>
                         <img src="Assets/Weapons/Marshal.png" alt="Classic">
                     </td>
                 </tr>
                 <tr class="Arsenal">
                     <td>
-                        <h5>Pistol</h5>
+                        <h5>Odin</h5>
                         <img src="Assets/Weapons/Odin.png" alt="Classic">
                     </td>
                     <td>
-                        <h5>Pistol</h5>
+                        <h5>Operator</h5>
                         <img src="Assets/Weapons/Operator.png" alt="Classic">
                     </td>
                 </tr>
                 <tr class="Arsenal">
                     <td>
-                        <h5>Pistol</h5>
+                        <h5>Phantom</h5>
                         <img src="Assets/Weapons/Phantom.png" alt="Classic">
                     </td>
                     <td>
-                        <h5>Pistol</h5>
+                        <h5>Sherrif</h5>
                         <img src="Assets/Weapons/Sheriff.png" alt="Classic">
                     </td>
                 </tr>
                 <tr class="Arsenal">
                     <td>
-                        <h5>Pistol</h5>
+                        <h5>Shorty</h5>
                         <img src="Assets/Weapons/Shorty.png" alt="Classic">
                     </td>
                     <td>
-                        <h5>Pistol</h5>
+                        <h5>Stinger</h5>
                         <img src="Assets/Weapons/Stinger.png" alt="Classic">
                     </td>
                 </tr>
